Fix squashed text when searching for location fields.

--- a/mozillians/static/mozillians/css/main.less
+++ b/mozillians/static/mozillians/css/main.less
@@ -1926,6 +1926,10 @@ body#edit-profile {
         }
     }
 
+    span .select2-search input[type=search] {
+        height: 30px;
+    }
+
     .panel-heading {
         .info {
             float:right;
